--- a/data/InfLoRA.bib
+++ b/data/InfLoRA.bib
@@ -1,6 +1,7 @@
-@article{liang2024inflora,
-  title={InfLoRA: Interference-Free Low-Rank Adaptation for Continual Learning},
+@inproceedings{liang2024inflora,
+  title={Inflora: Interference-free low-rank adaptation for continual learning},
   author={Liang, Yan-Shuo and Li, Wu-Jun},
-  journal={arXiv preprint arXiv:2404.00228},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={23638--23647},
   year={2024}
 }
