--- a/data/LODE.bib
+++ b/data/LODE.bib
@@ -1,6 +1,7 @@
-@inproceedings{liang2023adaptive,
-  title={Loss Decoupling for Continual Learning},
+@article{liang2023loss,
+  title={Loss decoupling for task-agnostic continual learning},
   author={Liang, Yan-Shuo and Li, Wu-Jun},
-  booktitle={Advances in Neural Information Processing Systems},
+  journal={Advances in Neural Information Processing Systems},
+  pages={11151--11167},
   year={2023}
 }
